# rdfglance

./: .gitignore  Cargo.toml  Readme.md  TODO.md  index.html  rdf-glance-13e308c2618e3d4.js  rdf-glance-307d863f0d869ebb.js  rdf-glance-3190e1b0518e6e3a.js  rdf-glance-4b57f004e973f9f7.js  rdf-glance-69cbf2144b5d69d7.js  rdf-glance-7784891e44f855b0.js  rdf-glance-846ce9c2b6df595c.js  rdf-glance-9778b05b42ba2d3b.js  rdf-glance-9cb97b705811b885.js  rdf-glance-a33308f04d09a48c.js  rdf-glance-a689c51036f284f2.js  rdf-glance-aca03cc8b6aaf4a8.js  rdf-glance-cccd977c6c651fa2.js  rdf-glance-d6f721e946c04eea.js  rdf-glance-ea918eb3c50147c1.js  rdf-glance-edb1fa0fe603031e.js  rdf-glance-f8abb076bc2f9401.js
.github/workflows/: rust.yml
documentation/: manual.md
python/: brandes.py  circular_layout.py  cleanup_data.py  cleanup_philosophers.py  cluster.csv  create_karate_graph.py  create_test_rdf.py  edges.csv  k_core.py  list_perm_swap.py  load_big_ttl.py  louvain.py  louvain_networkx.py  louvain_own_graph.py  query_loops.py  spectral_layout.py  sql2rdf.py  statistics.csv  zoom_distribute.py
sample-rdf-data/: README.md  chinook.ttl  karate_graph.ttl  nobel-prize-winners-by-year.json  philosophers.ttl  programming_languages.ttl  sample.ndjson  sample.xml  systemlandschaft.jsonld  systemlandschaft.ttl  visual_query.csv
src/: browse_view.rs  config.rs  distinct_colors.rs  drawing.rs  graph_styles.rs  graph_view.rs  layout.rs  lib.rs  main.rs  menu_bar.rs  meta_graph.rs  nobject.rs  persistency.rs  play_ground.rs  prefix_manager.rs  quad_tree.rs  rdfwrap.rs  sorting.rs  sparql.rs  sparql_dialog.rs  statistics.rs  string_indexer.rs  style.rs  table_view.rs  uitools.rs
src/domain/: app_persistence.rs  config.rs  graph_model.rs  graph_styles.rs  mod.rs  prefix_manager.rs  rdf_data.rs  reference_resolver.rs  statistics.rs  string_indexer.rs  type_index.rs  visual_query.rs
src/graph_algorithms/: betweenness_centrality.rs  closeness_centrality.rs  degree.rs  eigenvector.rs  find_connections.rs  k_core.rs  louvain.rs  mod.rs  page_rank.rs  spectral_clustering.rs  utils.rs
src/integration/: csv2rdf.rs  json2rdf.rs  mod.rs  persistency.rs  rdfwrap.rs  sparql.rs  svg.rs  visual_query.rs  xml2rdf.rs
src/layoutalg/: circular.rs  force.rs  hierarchical.rs  linear.rs  mod.rs  multipartite.rs  overlap.rs  spectral.rs
src/layoutalg/ortho/: channels.rs  mod.rs  route_sorting.rs  routing.rs  routing_slots.rs  sizelayout.rs
src/support/: distinct_colors.rs  mod.rs  quad_tree.rs  sorted_vec.rs  uitools.rs
src/ui/: browse_view.rs  config.rs  drawing.rs  graph_styles.rs  graph_view.rs  menu_bar.rs  meta_graph.rs  mod.rs  prefix_manager.rs  reference_resolver.rs  sparql_dialog.rs  statistics.rs  style.rs  table_view.rs  visual_query.rs
src/uistate/: actions.rs  app.rs  layout.rs  mod.rs  ref_selection.rs  uistate.rs  visual_query.rs
tests/: memory_usage.rs
