[package]
name = "rdf-glance"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"] }
# this is needed to set 'js' feature in dependend older version from oxrdf
getrandom_2 = { package="getrandom", version = "0.2.16", features = ["js"] }
eframe = {version="0.31.0", features = ["persistence"]}
egui = {version="0.31.0", features=["serde"]}
egui_extras = "0.31.0"
oxrdf ="0.2.4"
oxttl = "0.1.5"
rand = "0.9.0"
reqwest = {version="0.12.12", features = ["blocking"]}
rfd = "0.15.2"
serde_json = "1.0.138"
serde = { version = "1.0.138", features = ["derive"] }
indexmap = "2.7.1"
anyhow = "1.0.95"
oxrdfxml = "0.1.5"
bimap = "0.6.3"
const_format = "0.2.34"
byteorder = "1.5.0"
image = "0.25.6"
leb128 = "0.2.5"
flate2 = "1.1.1"
string-interner = "0.19.0"
unicode_names2 = "1.3.0"

[dev-dependencies]
peak_alloc = "0.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
poll-promise = { version = "0.3", features = ["web"] }
