[package]
name = "rdf-glance"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version="0.33.0", features = ["persistence"]}
egui = {version="0.33.0", features=["serde"]}
egui_extras = "0.33.0"
oxrdf ="0.3.1"
oxttl = "0.2.1"
rand = "0.9.2"
reqwest = {version="0.12.12", features = ["blocking"]}
rfd = "0.15.2"
serde_json = "1.0.138"
serde = { version = "1.0.138", features = ["derive"] }
indexmap = "2.7.1"
anyhow = "1.0.95"
oxrdfxml = "0.2.1"
bimap = "0.6.3"
const_format = "0.2.34"
byteorder = "1.5.0"
image = "0.25.6"
leb128 = "0.2.5"
flate2 = "1.1.1"
string-interner = "0.19.0"
unicode_names2 = "2.0.0"
rayon = "1.10.0"
atomic_float = "1.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
fixedbitset = "0.5.7"
csv = "1.3.1"
rust-sugiyama = "0.4.0"
nalgebra = "0.34.1"
lanczos = "0.2.0"

[dev-dependencies]
peak_alloc = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
# this is needed to set 'js' feature in dependend older version from oxrdf
getrandom_2 = { package="getrandom", version = "0.2.16", features = ["js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["UrlSearchParams", "Window", "Location"] }
poll-promise = { version = "0.3", features = ["web"] }
js-sys = "0.3"
