[package]
name = "rdf-glance"
version = "0.2.0"
edition = "2024"

[dependencies]
eframe = {version="0.34.3", features = ["persistence"]}
egui = {version="0.34.3", features=["serde"]}
egui_extras = "0.34.3"
oxrdf ="0.3.1"
oxttl = "0.2.1"
rand = "0.10.1"
reqwest = {version="0.13.4", features = ["blocking"]}
rfd = "0.17.2"
serde_json = "1.0.138"
serde = { version = "1.0.138", features = ["derive"] }
indexmap = "2.7.1"
anyhow = "1.0.95"
oxrdfxml = "0.2.1"
bimap = "0.6.3"
const_format = "0.2.34"
byteorder = "1.5.0"
image = "0.25.10"
leb128 = "0.2.5"
flate2 = "1.1.1"
string-interner = "0.20.0"
unicode_names2 = "2.0.0"
rayon = "1.10.0"
atomic_float = "1.1.0"
strum = "0.28.0"
strum_macros = "0.28.0"
fixedbitset = "0.5.7"
csv = "1.3.1"
rust-sugiyama = "0.4.0"
nalgebra = "0.35.0"
lanczos = "0.2.0"
delaunator = "1.0.2"
quick-xml = "0.40.1"
bitflags = "2.12.1"
ordered-float = "5.1.0"
oxjsonld = "0.2.5"
percent-encoding = "2.3.2"
slug = "0.1.6"
xxhash-rust = { version="0.8.15", features = ["xxh3"]}
base62 = "2.2.4"
json-event-parser = "0.2.3"

[dev-dependencies]
peak_alloc = "0.3.0"
plotters = { version = "0.3.7", features = ["ab_glyph", "fontconfig-dlopen"] }
plotters-svg = "0.3.7"

[target.'cfg(windows)'.dependencies]
windows = "0.62.2"
windows-core = "0.62.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
# this is needed to set 'js' feature in dependend older version from oxrdf
getrandom_2 = { package="getrandom", version = "0.3.4", features = ["wasm_js"] }
getrandom_3 = { package="getrandom", version = "0.2.17", features = ["js"] }
wasm-bindgen-futures = "0.4.73"
web-sys = { version = "0.3.100", features = ["UrlSearchParams", "Window", "Location"] }
poll-promise = { version = "0.3", features = ["web"] }
js-sys = "0.3.100"

[features]
# default = ["debug-orth"]
debug-orth = []
